--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-appengine@main
         with:
-          deliverables: app.yaml
+          deliverables: app.yml
           project_id: ${{ secrets.GCP_PROJECT }}
           credentials: ${{ secrets.GCP_SA_KEY }}
 
